# md-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENCE  README.md  cli.py  docker-compose.dev.yml  new_test.py  pyproject.toml
.github/instructions/: project-info.instructions.md
.github/workflows/: build-and-deploy.yml
docs/: api.md  docker.md  env.md  md-test.md
md_server/: __init__.py  api.py  auth.py  constants.py  dashboard.py  db.py  logging_config.py  main.py  md.py  middleware.py  models.py
md_server/cli/: __init__.py  auth.py  main.py
md_server/static/: __init__.py  cmd.css  cmd.js  editor.css  github-markdown.css  main.js  styles.css
md_server/templates/: 404.html  __init__.py  base.html  dashboard.html  editor.html  markdown.html
